--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -22,8 +22,10 @@
           <a class="nav-link" routerLink="/users">View Employee<span class="sr-only">(current)</span></a>
         </li>       
       </ul>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="/admin">Back<span class="sr-only">(current)</span></a>
+        </li>       
+      </ul>
       
     </div>
-  </nav>
-  <div class="container">
-  </div>
