--- a/src/app/review/review.component.html
+++ b/src/app/review/review.component.html
@@ -22,7 +22,11 @@
           <a class="nav-link" routerLink="/reviews">View <span class="sr-only">(current)</span></a>
         </li>       
       </ul>
-      
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="/admin">Back<span class="sr-only">(current)</span></a>
+        </li>       
+      </ul>
     </div>
   </nav>
   <div class="container">
