Updated with comments

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-   
-  
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
      <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" routerLink="/admin">HOME<span class="sr-only">(current)</span></a>
+            <a class="nav-link" routerLink="/home">HOME<span class="sr-only">(current)</span></a>
           </li>       
         </ul> <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" routerLink="/admin">ABOUT US<span class="sr-only">(current)</span></a>
+            <a class="nav-link" routerLink="/aboutus">ABOUT US<span class="sr-only">(current)</span></a>
           </li>       
         </ul> <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
