--- a/src/app/review/review.component.html
+++ b/src/app/review/review.component.html
@@ -1,3 +1,6 @@
+
+<!---------------------------Manage Review------------------------>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
    
   
