--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,7 @@
+
+
+<!--------------------------Admin home page---------------->
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
    
   
@@ -22,3 +26,5 @@
   </nav>
   <div class="container">
   </div>
+
+  <!----------------------------END-------------------------->
