--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,6 +1,8 @@
+
+
+<!--------------------------Manage Employeee---------------->
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-   
-  
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
@@ -29,3 +31,6 @@
       </ul>
       
     </div>
+
+    
+<!--------------------------END---------------->
