--- a/src/app/form/review-form/review-form.component.html
+++ b/src/app/form/review-form/review-form.component.html
@@ -1,4 +1,5 @@
 
+<!--------------------------Adding review form---------------->
 <br>
 <form (ngSubmit)="onSubmit()" >
         <h1>REVIEW DETAILS</h1>
@@ -16,3 +17,6 @@
       </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+
+<!--------------------------END---------------->
