--- a/src/app/list/feedback-list/feedback-list.component.html
+++ b/src/app/list/feedback-list/feedback-list.component.html
@@ -1,5 +1,7 @@
+
+<!------------------------Add feedback form for employees------->
+
 <h1>REVIEW DETAILS</h1>
-<!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
