--- a/src/app/loginform/loginform.component.html
+++ b/src/app/loginform/loginform.component.html
@@ -1,3 +1,5 @@
+<!--------------Login Page----------------> 
+
 <div class="container">
       <h2>Login</h2>
       <form #loginForm="ngForm" (ngSubmit)="loginUser()">
